Fix source links style on mobile

--- a/src/app/content/home/classement-home.component.scss
+++ b/src/app/content/home/classement-home.component.scss
@@ -98,6 +98,7 @@ navigate-result {
 
 .source-links {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     gap: 15px;
 }
